src/Test/Fixtures/Good/Gates/xLet.lf
let q: qubit = X(q);