src/Test/Fixtures/Bad/Types/unexpectedSecondParamAfterInitializer.lf
let theta: param = Param("theta") Param("gamma");